libycp/testsuite/tests/statements/Default.ycp
{
	default: return 1;	// error: default outside of switch

	return 0;
}
